Add missing examples.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -298,7 +298,10 @@ throughout]{rings:2011}.}
 
 \fntext{ds-13}{%
   The most well-known recording of “Alice in Wonderland” is probably on Bill
-  Evans’s \emph{Portrait in Jazz}.\nocite{evans:portrait}}
+  Evans’s \emph{Portrait in Jazz}.\nocite{evans:portrait} These changes are as
+  given in \emph{The Real Book}, and as played by Evans. This figure gives the
+  changes to the second ending of the first sixteen measures (the first ending
+contains a \tf\ in D minor to return to the opening).}
 
 \fntext{ds-14}{%
   The \h{Eb7} chord is a tritone substitute for \h{A7}, which is of course the
@@ -313,7 +316,7 @@ throughout]{rings:2011}.}
 
 \fntext{ds-16}{%
   Steven Rings refers to Lewin’s “intuitions” as “apperceptions”; see
-  \headlesscite[xxx]{rings:2011}.}
+  \headlesscite[17--21]{rings:2011}.}
 
 \fntext{ds-17}{%
   The canonical recording of this tune is again by Bill Evans, on the album
