--- a/ch1.tex
+++ b/ch1.tex
@@ -865,7 +865,7 @@ but because the quality of the tonic seventh chord is ambiguous in minor
 keys, this chord is easily understood as a tonic.
 
 \figBeg[htbp]
-  \centerGraphic{eps/xxx.pdf}
+  \centerGraphic{eps/ch1/wonderland-changes.pdf}
   \caption{Changes to “Alice in Wonderland” (Sammy Fain/Bob Hilliard), mm.\
   1--16.}
   \label{ds:wonderland-changes}
@@ -884,8 +884,8 @@ capture this intution by choosing to understand the progression not as a
 forward-directed $t_5$, but as an algebraically-equivalent combination of
 three ascending fifths ($t_3^{-1} + t_3^{-1} + t_3^{-1}$).
 
-\figBeg[htbp]
-  \centerGraphic{eps/xxx.pdf}
+\figBeg[h!btp]
+  \centerGraphic{eps/ch1/wonderland-transformations.pdf}
   \caption{The changes to “Alice in Wonderland,” with transformational labels
   between harmonies.}
   \label{ds:wonderland-transformations}
@@ -919,7 +919,7 @@ chords (in C major, \h{Bm7b5}--\h{Em7}--\h{Am7}--\h{Dm7}), which by comparison
 is a relatively unusable tonal progression.
 
 \figBeg[htbp]
-  \centerGraphic{eps/xxx.pdf}
+  \centerGraphic{eps/ch1/major-cycle.pdf}
   \caption{A diatonic cycle in C major.}
   \label{ds:major-cycle}
 \figEnd
@@ -935,8 +935,8 @@ tonic in m.~5, the $t_3$s continue making their way to A minor, four measures
 later.
 
 \figBeg[htbp]
-  \centerGraphic{eps/xxx.pdf}
-  \caption{Changes to “How My Heart Sings” (Earl Zindars), mm.~1--16.}
+  \centerGraphic{eps/ch1/heart-sings-changes.pdf}
+  \caption{Changes to “How My Heart Sings” (Earl Zindars), mm.~1--12.}
   \label{ds:heart-sings-changes}
 \figEnd
 
@@ -957,7 +957,6 @@ minor.
 
 % todo:
 %   - All the Things You Are, heard diatonically
-
 
 % }}}}
 
