--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -103,7 +103,7 @@
 \usepackage{newfloat}
 \DeclareFloatingEnvironment[
   name={Example},
-  placement=Htbp
+  placement=htbp
 ]{example}
 \newcommand{\exBeg}{\begin{example}}
 \newcommand{\exEnd}{\end{example}}
@@ -112,6 +112,7 @@
 \newcommand{\figEnd}{\end{figure}}
 
 \usepackage[section]{placeins}
+\usepackage{float}
 
 % provide opts to includegraphics as optional arg
 \newcommand{\centerGraphic}[2][]{%
