Add preliminary note to reader.

--- a/front.tex
+++ b/front.tex
@@ -1,6 +1,29 @@
 % Front matter
+\documentclass[diss]{subfiles}
 
+\begin{document}
 \title{A Transformational Approach to Jazz Harmony}
 \author{Michael McClimon}
 \date{}
 \maketitle
+
+\clearpage
+\section{Notes to the Reader}
+
+References to recordings in this dissertation are generally made only by
+giving the performer’s name and album title; complete identifying information
+can be found in the discography.
+
+When discussing a particular piece of jazz, the words “piece,” “composition,”
+and “work” all seem out of place. In general, I have adopted the word “tune”
+to mean roughly “the basic structure of a work, including (primarily) its
+melody and chord changes.” This is in keeping with the way jazz musicians use
+the word: they may refer to a “16-bar tune,' a “rhythm changes tune,” or “one
+of my favorite tunes” (all referring to the abstract structure of the tune and
+not simply the melody). When I am referencing a \emph{particular}
+instantiation of a work (e.g.~Bill Evans’s recording of “Autumn Leaves” from
+\emph{Portrait in Jazz}), I will make that clear.
+
+
+
+\end{document}
