--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -89,7 +89,7 @@
 \rhead{\thepage}
 \lfoot{}
 \cfoot{}
-%\rfoot{\scriptsize{(final version)}}
+\rfoot{\tiny{\today\ \currenttime}}
 \renewcommand{\headrulewidth}{0pt}
 
 % hyperref
