More front matter junk.

--- a/front.tex
+++ b/front.tex
@@ -7,9 +7,15 @@
 \date{}
 \maketitle
 
+\singlespacing
+
+\tableofcontents
+\listoffigures
 \clearpage
+
 \section{Notes to the Reader}
 
+\doublespacing
 References to recordings in this dissertation are generally made only by
 giving the performer’s name and album title; complete identifying information
 can be found in the discography.
