Preliminary text on All the Things You Are.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -330,6 +330,11 @@ contains a \tf\ in D minor to return to the opening).}
   \h{FM7} as a pivot, in order to keep both \tfo\ progressions (in C major and
   A minor) intact.}
 
+\fntext{ds-19}{%
+  Again, this implicit diatonicism has not gone unnoticed; Ahmad Jamal arrives
+  emphatically on \h{CM7} in the fourth bar of the bridge on \emph{Jamal at
+  the Pershing, Vol. 2}.\nocite{jamal:pershing}}
+
   % }}}}
 
 % }}}
