--- a/ch1.tex
+++ b/ch1.tex
@@ -958,6 +958,44 @@ minor.
 % todo:
 %   - All the Things You Are, heard diatonically
 
+% xxx rewrite me
+One more example will suffice to conclude our discussion of diatonic cycles:
+Jerome Kern’s “All the Things You Are” (the changes are given in Figure
+\ref{ds:all-things-changes}). Though this tune does not contain a
+cycle as explicit as the examples we have seen so far, viewing this piece
+through the lens of diatonic seventh chord space reveals connections that may
+otherwise go unnoticed.
+
+\figBeg[htbp]
+  \centerGraphic{eps/xxx.pdf}
+  \caption{Changes to “All the Things You Are” (Jerome Kern).}
+  \label{ds:all-things-changes}
+\figEnd
+
+“All the Things You Are” begins in the key of F minor, and progresses through
+a diatonic cycle (a chain of $t_3$ operations in an F-minor diatonic seventh
+chord GIS) until arriving on \h{DbM7} in m.~5. At this point, the chord roots
+continue to descend by diatonic fifth in the key of F minor, but the qualities
+of the chords rooted on G and C have been altered, from \h{Gm7b5} and \h{C7}
+(as they would be in the F-minor GIS) to \h{G7} and \h{CM7}. This arrival on a
+C major chord (rather than a C dominant seventh) has the effect of a half
+cadence in the prevailing key of F minor. The half-cadential C-major chord
+also serves as a linking chord to the next phrase, which contains a diatonic
+cycle in the key of C minor. Like the first A section, this phrase veers off
+to end in a half cadence on G major.
+
+The bridge of this tune is usually described as two \tfo\ progressions, the
+first in G major and the second in E major. While this is true, we might
+understand this progression as an alteration of a diatonic cycle in E minor.
+The bridge begins on a iv chord, which initiates a \tfo\ in the relative
+major. After two bars of \h{GM7}, a $t_6$ takes us to \h{Fsm7b5}. Just as in
+the bridge to “Autumn Leaves,” we can understand this $t_6$ as a combination
+of two $t_3$ operations, interpolating the missing \h{CM7} chord.\fn{ds-19}
+Though the cycle of the bridge (and its associated GIS) is in the key of E
+minor, the final chord is an E \emph{major} seventh, a kind of Picardy third
+so that the bridge, like the A sections, can end on a major chord.
+
+
 % }}}}
 
 %}}}
