More yak-shaving.
Now the PDF bookmarks match up to the right pages. This is obviously
very important and necessary to do now.

--- a/back.tex
+++ b/back.tex
@@ -1,7 +1,15 @@
 % back matter
+\documentclass[diss]{subfiles}
 
+\begin{document}
 \singlespacing
+\phantomsection
+\addcontentsline{toc}{chapter}{Bibliography}
 \printbibliography
 
 \clearpage
+\phantomsection
+\addcontentsline{toc}{chapter}{Discography}
 \printbibliography[title=Discography,type=music]
+
+\end{document}
