--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -96,7 +96,7 @@
 % hyperref
 % --------
 % (Provides PDF table of contents)
-\usepackage[unicode,bookmarks,pdfencoding=auto,hyperfootnotes=false,linktocpage]{hyperref}
+\usepackage[unicode,bookmarks,bookmarksnumbered,pdfencoding=auto,hyperfootnotes=false,linktocpage]{hyperref}
 \urlstyle{same}
 
 % examples/captions
