Finishing (1st-draft) "All the Things" analysis.

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -335,6 +335,29 @@ contains a \tf\ in D minor to return to the opening).}
   emphatically on \h{CM7} in the fourth bar of the bridge on \emph{Jamal at
   the Pershing, Vol. 2}.\nocite{jamal:pershing}}
 
+\fntext{ds-20}{%
+  If the linking dominant did not occur at the end of the bridge, we would see
+  the succession \h{EM7}--\h{Fm7}. This succession is remarkably similar to
+  Lewin’s \textsc{slide} operation: retaining the third of the chord while
+  moving the root and fifth by half-step; see \emph{GMIT},
+  178.\nocite{lewin:gmit} Here, the seventh is also retained as a common tone;
+  we will return to this operation (which we will call \slideS) in the next
+  chapter.}
+
+\fntext{ds-21}{%
+  Henry Martin analyzes the A section simply as a series of descending fifths
+  (taking note of the aberrant root tritone \Dflat--G) ending on C major.
+  His analysis assumes a chromatic space, in which the harmonic progressions
+  are more difficult to make sense of: he notes that “a certain tonal
+  ambiguity pervades this piece” (\headlesscite[15--19]{martin:1988}.).}
+
+\fntext{ds-22}{%
+  Hearing the third-relations does have the nice side effect, missing in our
+  analysis here, that all of the perceived tonics in the first sixteen bars
+  (\Aflat, C, \Eflat, G) spell out the tonic major-seventh chord;
+  \cite[19]{martin:1988} makes this observation.}
+
+
   % }}}}
 
 % }}}
