--- a/ch1.tex
+++ b/ch1.tex
@@ -984,16 +984,68 @@ also serves as a linking chord to the next phrase, which contains a diatonic
 cycle in the key of C minor. Like the first A section, this phrase veers off
 to end in a half cadence on G major.
 
-The bridge of this tune is usually described as two \tfo\ progressions, the
-first in G major and the second in E major. While this is true, we might
-understand this progression as an alteration of a diatonic cycle in E minor.
-The bridge begins on a iv chord, which initiates a \tfo\ in the relative
-major. After two bars of \h{GM7}, a $t_6$ takes us to \h{Fsm7b5}. Just as in
-the bridge to “Autumn Leaves,” we can understand this $t_6$ as a combination
-of two $t_3$ operations, interpolating the missing \h{CM7} chord.\fn{ds-19}
-Though the cycle of the bridge (and its associated GIS) is in the key of E
-minor, the final chord is an E \emph{major} seventh, a kind of Picardy third
-so that the bridge, like the A sections, can end on a major chord.
+The bridge of this tune is usually described as being made up of two \tfo\
+progressions, the first in G major and the second in E major. While this is
+true, we might understand this progression as an alteration of a diatonic
+cycle in E minor.  The bridge begins on a iv chord, which initiates a \tfo\ in
+the relative major. After two bars of \h{GM7}, a $t_6$ takes us to \h{Fsm7b5}.
+Just as in the bridge to “Autumn Leaves,” we can understand this $t_6$ as a
+combination of two $t_3$ operations, interpolating the missing \h{CM7}
+chord.\fn{ds-19} Though the cycle of the bridge (and its associated GIS) is in
+the key of E minor, the final chord is an E \emph{major} seventh, a kind of
+Picardy third; in this way the bridge, like the A sections, can end on a major
+chord.
+
+The final A section of “All the Things You Are” is an expanded version of the
+first, now ending in the overall tonic of \Aflat. It begins, after a linking
+\h{C7s5} chord, by outlining a series of $t_3$ operations that lead to
+\h{DbM7}.\fn{ds-20} At this point we might expect the $t_3$s to continue,
+leading to \h{Gm7b5}--\h{C7}--\h{Fm} (the tonic of the cycle), but instead we
+get \h{Gb7}--\h{Cm7}--\h{Bo7}. This progression is clearly not diatonic, so we
+cannot say much about it at this point. It is interesting to note, however,
+that harmony four bars from the end is a \h{Bbm7}, which is exactly where the
+chain of $t_3$s would have ended, had it continued (see Figure
+\ref{ds:all-things-last-a}). After this phrase expansion, the piece closes
+with a \tfo\ in the key of \Aflat.
+
+\figBeg[htbp]
+  \centerGraphic{eps/xxx.pdf}
+  \caption[Two versions of “All the Things You Are,” final twelve bars.]{The
+  final twelve bars of “All the Things You Are.” Letter \emph{a} gives the
+  changes as written, while letter \emph{b} gives a hypothetical version that
+  continues the $t_3$ cycle in \mbox{F minor/}\Aflat\ major.}
+  \label{ds:all-things-last-a}
+\figEnd
+
+Again, we might pause to ask what is gained by hearing “All the Things You
+Are” in diatonic, rather than chromatic, space. After all, there is never a
+clear statement of a diatonic cycle in the manner of “Autumn Leaves” or “Alice
+in Wonderland,” and music in chromatic space (as we will begin to see in the
+next chapter) still tends to descend by fifth. Without the guiding influence
+of F minor, the succession of chord qualities at the beginning does not make
+too much sense: two minor chords, followed by a dominant seventh, then two
+major chords, all seemingly unrelated to the phrase-concluding tonic C
+major.\fn{ds-21} Understanding the first 8 bars as diatonic, ending with a
+tonicized half cadence, makes sense of the chord qualities, and eliminates the
+difficult-\hspace{0pt}to-explain third relation \h{AbM}--\h{CM} that results
+from a desire to hear both \mbox{V--I} progressions in the A section as
+tonic-defining.\fn{ds-22}
+
+Hearing “All the Things You Are” diatonically allows us to listen to sections
+of music at once: the first eight bars are in F minor, the next eight in C
+minor, the bridge in E minor, and the last twelve return to F minor before
+shifting to the relative major, \Aflat, for the final cadence. When we hear
+the tune as a chain of $t_3$ operations in shifting diatonic spaces, our
+attention is drawn to the connections between the spaces (key areas)
+themselves, rather than the (comparatively boring) series of descending
+diatonic fifths that occur within them.  While transformational analyses are
+often accused of privileging chord-to-chord connections to the detriment of
+long-range hearing, in this case it is the GIS framework developed above that
+allows us to hear over longer distances where chord-to-chord connections may
+fail to do so.
+
+% xxx more here?
+
 
 
 % }}}}
