Add prelim. outline for rest of diss.
I think this finishes the first super-preliminary draft of a whole
chapter!

--- a/ch1.tex
+++ b/ch1.tex
@@ -1044,9 +1044,27 @@ long-range hearing, in this case it is the GIS framework developed above that
 allows us to hear over longer distances where chord-to-chord connections may
 fail to do so.
 
-% xxx more here?
+% xxx more here on All the Things?
 
+% xxx This will need to be rewritten once everything else is done
 
+Though they do appear occasionally, most jazz tunes do not contain diatonic
+cycles, and thus we will need to expand the transformational approach
+introduced here to account for a larger portion of jazz practice. Chapter 2
+will outline an approach to chromatic space that will help to understand the
+\tfo\ progressions that we passed over in our discussion of diatonic space.
+Transformational approaches, and neo-Riemannian theories in particular, have
+flourished partly because of their ability to explain non-functional
+progressions that contain primarily root motion by thirds. Chapter 3 will
+draw upon this literature to approach jazz, especially common after
+bebop, that is more dependent on thirds than fifths for structure. Though
+harmony is crucially important to performing jazz musicians, much of the jazz
+pedagogical literature equate chords with scales: a \h{Dm7} chord is
+functionally equivalent to a D dorian scale, for example. Chapter 4 will
+develop a transformational approach for these “chord-scales,” treating scales
+as first-class harmonic objects. Finally, Chapter 5 will bring the theoretical
+work of the early chapters to a close, by taking a close analytic look at
+tunes based on George Gershwin’s “I Got Rhythm.”
 
 % }}}}
 
