Examples for "All the Things You Are."

--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -330,6 +330,13 @@ contains a \tf\ in D minor to return to the opening).}
   \h{FM7} as a pivot, in order to keep both \tfo\ progressions (in C major and
   A minor) intact.}
 
+\fntext{ds-18a}{%
+  These changes are again taken from \emph{The Real Book}. The \h{Am7b5} chord
+  in the sixth bar of the A$^\prime$ section is not included in some charts of
+  this tune, so I have put it in parentheses here. (The older, illegal
+  \emph{Real Book} as well as another illegal fake book called simply \emph{The
+  Book} both omit this chord.)}
+
 \fntext{ds-19}{%
   Again, this implicit diatonicism has not gone unnoticed; Ahmad Jamal arrives
   emphatically on \h{CM7} in the fourth bar of the bridge on \emph{Jamal at
