--- a/ch1.tex
+++ b/ch1.tex
@@ -961,13 +961,13 @@ minor.
 % xxx rewrite me
 One more example will suffice to conclude our discussion of diatonic cycles:
 Jerome Kern’s “All the Things You Are” (the changes are given in Figure
-\ref{ds:all-things-changes}). Though this tune does not contain a
+\ref{ds:all-things-changes}).\fn{ds-18a} Though this tune does not contain a
 cycle as explicit as the examples we have seen so far, viewing this piece
 through the lens of diatonic seventh chord space reveals connections that may
 otherwise go unnoticed.
 
 \figBeg[htbp]
-  \centerGraphic{eps/xxx.pdf}
+  \centerGraphic{eps/ch1/all-things-changes.pdf}
   \caption{Changes to “All the Things You Are” (Jerome Kern).}
   \label{ds:all-things-changes}
 \figEnd
@@ -1009,11 +1009,13 @@ chain of $t_3$s would have ended, had it continued (see Figure
 with a \tfo\ in the key of \Aflat.
 
 \figBeg[htbp]
-  \centerGraphic{eps/xxx.pdf}
-  \caption[Two versions of “All the Things You Are,” final twelve bars.]{The
-  final twelve bars of “All the Things You Are.” Letter \emph{a} gives the
-  changes as written, while letter \emph{b} gives a hypothetical version that
-  continues the $t_3$ cycle in \mbox{F minor/}\Aflat\ major.}
+  \centerGraphic{eps/ch1/all-things-last-a.pdf}
+  \captionsetup{format=hang}
+  \caption[Two versions of “All the Things You Are,” final nine bars.]{The
+  final nine bars of “All the Things You Are.” \\
+  a\rightparen\ The changes as written. \\
+  b\rightparen\ A hypothetical version that continues the $t_3$ cycle in \mbox{F
+    minor/}\Aflat\ major.}
   \label{ds:all-things-last-a}
 \figEnd
 
