--- a/mjmdiss.sty
+++ b/mjmdiss.sty
@@ -191,6 +191,7 @@
 \newcommand{\slideS}{\textsc{slide}\textsuperscript{7}}
 \newcommand{\tsub}{\textsubscript}
 \newcommand{\tsup}{\textsuperscript}
+\newcommand{\rightparen}{)}
 
 
 % math shortcuts
