Edits for section 1.1.

--- a/diss.bib
+++ b/diss.bib
@@ -172,6 +172,14 @@ Theory} }
   year        = {1991}
 }
 
+@book{deveaux:1997,
+  author      = {Deveaux, Scott},
+  title       = {The Birth of Bebop: A Social and Musical History},
+  address     = {Berkeley},
+  publisher   = {University of California Press},
+  year        = {1997}
+}
+
 @article{douthettsteinbach:1998,
   author      = {Douthett, Jack and Steinbach, Peter},
   title       = {Parsimonious Graphs},
