--- a/ch1-notes.tex
+++ b/ch1-notes.tex
@@ -15,8 +15,18 @@
   \emph{Kind of Blue}, John Coltrane’s recording of “My Favorite Things,” and
   Herbie Hancock’s “Maiden Voyage.”}
 
+\fntext{pja-2a}{%
+  As Scott DeVeaux puts it, bebop is “both the source of the present \ldots\
+  and the prism through which we absorb the past. To understand jazz, one must
+  understand bebop.”\headlesscite[3]{deveaux:1997}}
+
+\fntext{pja-2b}{%
+  This is not meant to imply that “chromatic harmony” is not tonal; rather,
+  studies that focus specifically on chromatic harmony often differentiate
+  themselves from other tonal theoretical traditions.}
+
 \fntext{pja-3a}{%
-  Fake books are collections of lead sheets which were traditionally compiled
+  Fake books are collections of lead sheets that traditionally were compiled
   anonymously and sold illegally, in order to avoid paying the copyright
   owners of the compositions they contained. The name “fake book” comes from
   the fact that with the melody and chord changes, jazz musicians can easily
@@ -34,23 +44,37 @@
   By the time they become standards, many non-jazz compositions (Tin Pan Alley
   songs or traditional songs like “Back Home Again in Indiana”) have been
   adapted, typically to additional harmonic motion to provide interest during
-  solos. Some examples are more radical: the tune “Alice in Wonderland,” for
-  example, is known to jazz musicians as a jazz waltz with one chord per bar.
-  The main title music in the 1951 film from which it was taken, however, is
-  in 4/4 with a relatively slower harmonic rhythm.}
+  solos. Some examples are more radical: the tune “Alice in Wonderland”
+  (analyzed below), for example, is known to jazz musicians as a jazz waltz
+  with one chord per bar.  The main title music in the 1951 film from which it
+  was taken, however, is in 4/4 with a relatively slower harmonic rhythm.}
 
 \fntext{pja-3c}{%
   \cite[5--6]{martin:1996}. See also \cite[36--39]{heyer:2011}.}
+
+\fntext{pja-3d}{%
+  The “head” is what jazz musicians call the statements of the melody in the
+  course of a jazz performance. This melody is typicall played once at the
+  beginning of a performance and again at the end (often referred to as the
+  “out head.”}
+
+\fntext{pja-4a}{%
+  In places where I refer to a “tune” generically, I have tried to provide at
+  least two references to relatively straight-ahead recorded examples.}
 
 \fntext{pja-4}{%
   The Thelonious Monk Institute of Jazz maintains a web page on the history of
   jazz education in America at
   \url{http://www.jazzinamerica.org/JazzResources/JazzEducation/Page}.}
 
-
 \fntext{pja-5}{%
   A noted exception here is Andy Jaffe’s \headlesscite{jaffe:1996}, which
   features an extended bibliography that includes many theoretical works.}
+
+\fntext{pja-5a}{%
+  This issue of \emph{Music Theory Online} is a Festschrift in memory of Steve
+  Larson (September 2012), guest edited by Stephen Rodgers, Henry Martin, and
+  Keith Waters.}
 
 \fntext{pja-6}{%
   See, for example, \cite{gjerdingen:2007}; and \cite{sanguinetti:2012}.}
