--- a/ch1.tex
+++ b/ch1.tex
@@ -8,29 +8,29 @@
 \section{Problems of Jazz Analysis}
 \label{sec:problems-jazz-analysis} %{{{
 
-When compared to a score by Beethoven (for example), the jazz lead sheet appears
-strikingly bare. The Beethoven score specifies nearly everything a performer
-needs to know in order to perform it. Though the minor details (dynamics,
-articulations, phrasing marks, and the like) will differ from piece to piece,
-we can usually depend on the presence of some basic information. It is rare for
-traditional scores not to include the instrumentation, for example, and a score
-that did not include information like the number of measures or which notes to
-play in combination with which which other notes would be very unusual indeed.
+When compared to a score by Beethoven (for example), the jazz lead sheet
+appears strikingly bare. The Beethoven score specifies nearly everything one
+might need to know in order to perform it. Though the minor details---dynamics,
+articulations, phrasing marks, and the like---will differ from piece to piece,
+we can usually depend on the presence of some basic information. It is rare
+for traditional scores not to include the instrumentation, for example, and a
+score that did not include the number of measures or which notes to play in
+combination with which which other notes would be very unusual indeed.
 
 And yet, this is the usual state affairs for the jazz lead sheet, which is
-probably the most common form of a “jazz score.”\fn{pja-1} Most lead sheets only
-include the basic outline of a melody along with a set of “changes” that
-prescribe the harmonic structure of a piece. Beyond this most basic instruction,
-every other aspect is left up to the performers. Given that most small-group
-jazz musicians approach the music first with these lead sheets, it seems
-appropriate to focus our analytical attention on harmony, the more salient of
-those two elements.
+probably the most common form of a “jazz score.”\fn{pja-1} Most lead sheets
+only include the basic outline of a melody, along with a set of “changes” that
+prescribe the harmonic structure of a piece. Beyond this most basic
+instruction, every other aspect is left up to the performers.  Of these two
+elements (melody and harmony), harmony has a much larger role in determining
+the course of a particular jazz performance, so it seems appropriate to focus
+our analytical attention on it.
 
 Jazz is essentially a harmonic music. In a typical jazz performance, the melody
 of the piece is only heard twice (at the beginning and the end), while the
 harmonic structure is heard throughout, determining the structure of the
 performance. Each soloist typically plays one or more “choruses,” where each
-chorus is understood as a single iteration of the pieces harmonic structure.
+chorus is understood as a single iteration of the piece’s harmonic structure.
 In marked contrast to a Beethoven score, jazz compositions usually remain
 unspecified when it comes to their contrapuntal structure: performers will
 typically improvise counterpoint that fits with the underlying harmonic
@@ -43,7 +43,7 @@ Mehldau, among many others---is inescapably vague, so it will be useful at
 this point to delimit the terms of this study somewhat. Here I am interested
 in in what might be called “tonal jazz,” which begins in the swing area and
 continues through hard bop, covering roughly the years 1935--1965. In this
-music, functional harmonic progressions are still the norm; “tonal jazz” is
+music, functional harmonic progressions are the norm; “tonal jazz” is
 meant in opposition to “modal jazz,” where the rate of harmonic change is
 slower and the harmony is mostly non-functional.\fn{pja-2} This includes much
 of the music that most people think of when they hear the word “jazz,”
@@ -53,7 +53,8 @@ that followed bebop, known variously as “hard bop” or “post-bop” (John
 Coltrane, Sonny Rollins, Bill Evans, and many others). I intend the dates to
 be flexible, especially on the later end; given the strong influence of the
 bebop tradition on jazz and jazz pedagogy, the hard bop style continued to
-exist well beyond 1965, and many players today still play in the style.
+exist well beyond 1965, and many players today still play in the
+style.\fn{pja-2a}
 
 Now that we have delineated “jazz,” we should explain exactly what we mean by
 “harmony.” Harmony is of course one of the oldest topics in music theory, and
@@ -64,27 +65,25 @@ verticalities. In other traditions (most notably the Schenkerian tradition),
 harmony is understood to be an outgrowth of counterpoint: verticalities arise
 primarily through contrapuntal procedures. Furthermore, study of harmony is
 often broken down by genre: “tonal harmony” plays a different role than does
-“chromatic harmony” in both theoretical research and pedagogy.
+“chromatic harmony” in both theoretical research and pedagogy.\fn{pja-2b}
 
 When jazz musicians refer to “harmony,” they are typically referring to the
-changes themselves, that is, the chord symbols given on a lead sheet or
+changes themselves; that is, the chord symbols given on a lead sheet or
 arrangement. Even when they are not playing from sheet music, the chord symbol
 is the basic unit of harmonic understanding for jazz musicians. The reason for
 this is largly practical: a chord symbol is a concise way of referring to a
 particular sound, and improvising musicians must be able to understand this
 information quickly (when reading) and to recall it easily (when improvising).
 
-% rewrite? {
 Since the pioneering work of George Russell in the late 1950s, many jazz
 musicians conceive of an equivalence between a harmony (a chord symbol) and a
 scale.\footcite{russell:lcc} The chord symbol \h{Dm7} might imply a D dorian
 scale, for example, rather than simply the notes D--F--A--C. Because any of
 the notes of this scale will sound relatively good over a \h{Dm7} chord, the
-chord symbol makes a convenient shorthand for a particular “way of playing.”
-This equivalence between chords and scales will be the focus of chapter 4; for
+chord symbol acts as a convenient shorthand for a particular “way of playing.”
+This equivalence between chords and scales will be the focus of Chapter 4; for
 now it enough to note that understanding jazz harmony often involves more than
 understanding relationships between four-voice seventh chords.
-%}
 
 When analyzing jazz harmony, it is often difficult to determine exactly what
 one should be analyzing. Lead sheets as circulated in fake books can be highly
@@ -95,15 +94,15 @@ standards which may have originated elsewhere, we might wonder whether should
 we analyze the original sources. In many cases, however, the “jazz standard”
 version may be significantly different from the original version, reflecting a
 history of adaptation by generations of jazz musicians.\fn{pja-3b} To make
-matters worse, this knowledge is often secret knowledge, not written down and
-learned only from more experienced musicians.
+matters worse for the aspiring academic, this knowledge is often secret
+knowledge, not written down and learned only from more experienced musicians.
 
 Many published jazz analyses rely on transcriptions of particular performances
 as a way to avoid some of these issues. In general, this solution works well,
 and I will certainly make use of them from time to time. This study, however,
 is interested in harmony more generally, and transcriptions can confuse
 matters somewhat. The kinds of questions I am interested in answering are of
-the type “What can we say about harmony in the piece ‘Autumn Leaves’?” and
+the type “What can we say about harmony in the piece ‘Autumn Leaves?’” and
 less often of the type “What can we say about Bill Evans’s use of harmony in
 the recording of ‘Autumn Leaves’ from \emph{Portrait in Jazz}?” Furthermore,
 even transcriptions are not definitive when it comes to harmony: the pianist
@@ -112,26 +111,26 @@ different harmony in mind than the rhythm section; or the bass player might
 play a bass line in such a way that affects our perception of the chordal
 root. Even in the course of a single performance, a group might alter a tune’s
 harmonic progression, perhaps preferring some substitutions during solos and
-others during the head.
+others during the head.\fn{pja-3d}
 
 This is a problem without one clear solution, and it may make more sense to
 use one method or another depending on the situation. Some compositions have
 canonical recordings---Coleman Hawkins’s recording of “Body and Soul,” for
 example---and in those circumstances determining the changes is usually
 unproblematic. Other compositions are more fluid, and different choruses might
-alter the basic structure throughout (substituting a \h{V7b9} for a \h{V13s11}
-chord, for example).  In these cases, I am interested in what Henry Martin has
-called the “ideal changes”; a hypothetical set of chords that we can use as a
-basis for understanding the many variations that might occur in actual
-performance.\fn{pja-3c} These changes represent a sort of Platonic model of a
-composition; individual performances of “Autumn Leaves” can be seen as
-instances of some ideal “\textsc{Autumn Leaves}.” Determining these ideal
-changes is often a process of mediating published lead sheets, recorded
-versions, and other sources; throughout this study I have tried to clarify
-exactly \emph{what} harmony I am analyzing in any given example.
+alter the basic structure within the course of a single performance
+(substituting a \h{V7b9} for a \h{V13s11} chord, for example). In these
+cases, I am interested in what Henry Martin has called the “ideal changes”; a
+hypothetical set of chords that we can use as a basis for understanding the
+many variations that might occur in actual performance.\fn{pja-3c} These
+changes represent a sort of Platonic model of a composition; individual
+performances of “Autumn Leaves” can be seen as instances of some ideal
+“\textsc{Autumn Leaves}.” Determining these ideal changes is often a process
+of mediating published lead sheets, recorded versions, and other sources;
+throughout this study I have tried to clarify exactly \emph{what} harmony I am
+analyzing in any given example.\fn{pja-4a}
 
-
-In an attempt to answer some of these problems, this dissertation presents a
+In an attempt to answer some of these questions, this dissertation presents a
 transformational model of jazz harmony. While on the surface a
 transformational model may seem abstract and far-removed from the concerns of
 performing jazz musicians, harmony in jazz fits together nicely with David
@@ -150,10 +149,10 @@ theoretical and mathematical rigor to materials that are often ignored by the
 theory community, and by applying established theoretical principles in a way
 that corresponds closely with the understanding of jazz musicians.
 
-While we can never claim to know “what jazz musicians think,” we might get
+While we can never claim to know what jazz musicians think, we might get
 somewhat closer to an answer by examining jazz pedagogical materials. In the
 late 1960s, jazz began to be accepted into the academy, and many young jazz
-musicians began to learn to play the music in schools, rather than exclusively
+musicians began learned to play the music in schools, rather than exclusively
 from older musicians.\fn{pja-4} To supplement this teaching, a great deal of
 pedagogical material has appeared that aims to teach young musicians how to
 play jazz.
@@ -166,15 +165,16 @@ Likewise, most theoretical work does not refer to these harmonic handbooks
 which are staples of jazz education. Mark Levine’s \emph{Jazz Theory
 Book}\nocite{levine:1995}, widely regarded in the jazz education world as
 \emph{the} book on jazz theory, does not appear in any of the bibliographies
-in the special jazz issue of \emph{Music Theory Online} (18.3), for example.
+in a special jazz issue of \emph{Music Theory Online} (18.3), for
+example.\fn{pja-5a}
 
 In recent years the theory community has embraced pedagogical materials as a
 means of uncovering how historical musicians might have thought about their
 own music.\fn{pja-6} Though jazz pedagogues do not typically publish articles
-in music theory journals or otherwise consider themselves “music theorists,”
-per se, the goal of their harmonic textbooks is quite similar to the goals of
-pedagogical books in music theory: to teach students how to think in a
-particular style of music.
+in music theory journals or otherwise consider themselves to be “music
+theorists,” per se, the goal of their harmonic textbooks is quite similar to
+the goals of pedagogical books in music theory: to teach students how to think
+(or hear, or perform) in a particular style of music.
 
 David Lewin points out in his introduction to transformational theory that
 when considering a particular musical passage, we often “conceptualize along
@@ -187,9 +187,7 @@ mathematical appearance, transformational theory is an effective means of
 exploring these families of intuitions. Modeling sets of chord changes as
 transformations between harmonic objects, for example, allows the theoretical
 discourse to draw on the ways in which jazz musicians teach harmony, and can
-bring these two disparate fields somewhat closer together.
-
-% include a brief outline here?
+bring these two disparate areas somewhat closer together.
 
 % }}}
 
